Map ALT+Backspace to DEL

--- a/assets/help/PhysicalKeyboard.html
+++ b/assets/help/PhysicalKeyboard.html
@@ -71,6 +71,10 @@ have to activate the appropriate option in application settings.</p>
 	<br><strong>Alt</strong> + Right Arrow = End</blockquote>
 </ul>
 <ul>
+	<li>Other keys</li>
+	<blockquote><strong>Alt</strong> + BackSpace = Del</blockquote>
+</ul>
+<ul>
 	<li>Additional mappings for Xperia (mini) pro:</li>
 	<blockquote><strong>Alt</strong> + S = pipe symbol
 	<br><strong>Alt</strong> + Z = backslash
