Update style for html help.

--- a/assets/help/PhysicalKeyboard.html
+++ b/assets/help/PhysicalKeyboard.html
@@ -1,5 +1,5 @@
 <html>
-<body style="background-color: #000; color: #fff">
+<body bgcolor="#000000" text="#FFFFFF">
 
 <p>Here are some keyboard shortcuts available when a <strong>hardware
 keyboard</strong> is present. If you&#x27;re using a phone where the main input
