--- a/assets/help/ScreenGestures.html
+++ b/assets/help/ScreenGestures.html
@@ -1,5 +1,5 @@
 <html>
-<body style="background-color: #000; color: #fff">
+<body bgcolor="#000000" text="#FFFFFF"
 
 <p>Gestures in ConnectBot allow a user to do several things for
 which there&#x27;s no keyboard equivalent. If the gestures seem
