--- a/assets/help/VirtualKeyboard.html
+++ b/assets/help/VirtualKeyboard.html
@@ -1,5 +1,5 @@
 <html>
-<body style="background-color: #000; color: #fff">
+<body bgcolor="#000000" text="#FFFFFF"
 
 <h2>Caveats</h2>
 <p>Since ConnectBot doesn&#x27;t use any of the normal TextView
