Unify name to VX ConnectBot Update header in Hints.html

--- a/assets/help/About.html
+++ b/assets/help/About.html
@@ -1,7 +1,7 @@
 <html>
 <body bgcolor="#000000" text="#FFFFFF" link="#00FFFF">
 
-<h2>VX Connectbot</h2>
+<h2>VX ConnectBot</h2>
 <p>Copyright (c) 2011 Martin Matuska &lt;martin.matuska@vx.sk&gt;</p>
 <p>This is a modified version of <a href="http://code.google.com/p/connectbot/">connectbot</a> targetting users of Sony Ericsson Xperia (mini) pro smartphones.</p>
 <p>It is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License, Version 2.0</a></p>
