--- a/assets/help/About.html
+++ b/assets/help/About.html
@@ -14,6 +14,6 @@ Based in part on the Trilead SSH2 client, provided under a BSD-style license.  C
 Also based on JTA Telnet/SSH client, provided under the GPLv2 license. Copyright (c) Matthias L. Jugel, Marcus Meiner 1996-2005. <a href="http://www.javassh.org">http://www.javassh.org</a><br>
 Also based in part on the JSOCKS library, provided under the GNU LGPL license. (c) <a href="http://jsocks.sourceforge.net">http://jsocks.sourceforge.net</a><br>
 Also based in part on JZlib provided under a BSD-style license. Copyright (c) JCraft, Inc., 2000-2004 <a href="http://www.jcraft.com">http://www.jcraft.com</a><br>
-This software includes modifications from Irssiconnectbot (<a href="https://github.com/irssiconnectbot/irssiconnectbot">https://github.com/irssiconnectbot/irssiconnectbot</a>) developed by Iiro Uusitalo and Ville Kerminen.
-This software includes the ssh-agent service developed by Roberto Tyley (<a gref="https://github.com/rtyley">https://github.com/rtyley</a>)
+This software includes modifications from Irssiconnectbot (<a href="https://github.com/irssiconnectbot/irssiconnectbot">https://github.com/irssiconnectbot/irssiconnectbot</a>) developed by Iiro Uusitalo and Ville Kerminen.<br>
+This software includes the ssh-agent service developed by Roberto Tyley (<a href="https://github.com/rtyley">https://github.com/rtyley</a>)
 </p>
