--- a/assets/help/About.html
+++ b/assets/help/About.html
@@ -3,13 +3,13 @@
 
 <h2>VX ConnectBot</h2>
 <p>Copyright (c) 2011 Martin Matuska &lt;martin.matuska@vx.sk&gt;</p>
-<p>This is a modified version of <a href="http://code.google.com/p/connectbot/">connectbot</a> targetting users of Sony Ericsson Xperia (mini) pro smartphones.</p>
+<p>This is an enhanced version of the popular open-source telnet and secure shell (SSH) client ConnectBot.</p>
 <p>It is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License, Version 2.0</a></p>
 <p>Homepage: <a href="http://connectbot.vx.sk">http://connectbot.vx.sk</a></p>
 
 <h2>Credits</h2>
-<p>This software is based on connectbot (<a href="http://code.google.com/p/connectbot/">http://code.google.com/p/connectbot/</a>):<br>
-Copyright (c) 2007-2011 Kenny Root <a href="http://the-b.org">http://the-b.org</a>, Jeffrey Sharkey <a href="http://jsharkey.org">http://jsharkey.org</a><br>
+<p>This software is based on connectbot (<a href="http://code.google.com/p/connectbot/">http://code.google.com/p/connectbot/</a>)<br>
+ConnectBot Copyright (c) 2007-2011 Kenny Root <a href="http://the-b.org">http://the-b.org</a>, Jeffrey Sharkey <a href="http://jsharkey.org">http://jsharkey.org</a><br>
 Based in part on the Trilead SSH2 client, provided under a BSD-style license.  Copyright (c) 2007 Trilead AG.  <a href="http://www.trilead.com">http://www.trilead.com</a><br>
 Also based on JTA Telnet/SSH client, provided under the GPLv2 license. Copyright (c) Matthias L. Jugel, Marcus Meiner 1996-2005. <a href="http://www.javassh.org">http://www.javassh.org</a><br>
 Also based in part on the JSOCKS library, provided under the GNU LGPL license. (c) <a href="http://jsocks.sourceforge.net">http://jsocks.sourceforge.net</a><br>
