--- a/assets/help/About.html
+++ b/assets/help/About.html
@@ -1,8 +1,9 @@
-<html>
+﻿<html>
+<head><meta http-equiv="content-type" content="text/html; charset=utf-8" /></head>
 <body bgcolor="#000000" text="#FFFFFF" link="#00FFFF">
 
 <h2>VX ConnectBot</h2>
-<p>Copyright (c) 2011 Martin Matuska &lt;martin.matuska@vx.sk&gt;</p>
+<p>Copyright (c) 2011 Martin Matuška &lt;martin.matuska@vx.sk&gt;</p>
 <p>This is an enhanced version of the popular open-source telnet and secure shell (SSH) client ConnectBot.</p>
 <p>It is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License, Version 2.0</a></p>
 <p>Homepage: <a href="http://connectbot.vx.sk">http://connectbot.vx.sk</a></p>
