--- a/assets/help/About.html
+++ b/assets/help/About.html
@@ -16,5 +16,7 @@ Also based on JTA Telnet/SSH client, provided under the GPLv2 license. Copyright
 Also based in part on the JSOCKS library, provided under the GNU LGPL license. (c) <a href="http://jsocks.sourceforge.net">http://jsocks.sourceforge.net</a><br>
 Also based in part on JZlib provided under a BSD-style license. Copyright (c) JCraft, Inc., 2000-2004 <a href="http://www.jcraft.com">http://www.jcraft.com</a><br>
 This software includes modifications from Irssiconnectbot (<a href="https://github.com/irssiconnectbot/irssiconnectbot">https://github.com/irssiconnectbot/irssiconnectbot</a>) developed by Iiro Uusitalo and Ville Kerminen.<br>
-This software includes the ssh-agent service developed by Roberto Tyley (<a href="https://github.com/rtyley">https://github.com/rtyley</a>)
+This software includes the ssh-agent service developed by Roberto Tyley (<a href="https://github.com/rtyley">https://github.com/rtyley</a>)<br>
+SCP file transfer support is badsed on <a href="https://github.com/staktrace/connectbot/commits/filetransfer">modifications</a> by Kartikaya Gupta.<br>
+Internal file selection dialog is based on <a href="http://code.google.com/p/android-file-dialog/">Android File Dialog</a> by Alexander Ponomarev, provided under a BSD-style license.
 </p>
