Update new key mappings in HTML help.

--- a/assets/help/PhysicalKeyboard.html
+++ b/assets/help/PhysicalKeyboard.html
@@ -68,17 +68,27 @@ have to activate the appropriate option in application settings.</p>
 	<blockquote><strong>Alt</strong> + Up Arrow = Page Up
 	<br><strong>Alt</strong> + Down Arrow = Page Down
 	<br><strong>Alt</strong> + Left Arrow = Home
-	<br><strong>Alt</strong> + Right Arrow = End</blockquote>
+	<br><strong>Alt</strong> + Right Arrow = End
+	<br><strong>Search key</strong> = URL scan</blockquote>
 </ul>
 <ul>
 	<li>Other keys</li>
-	<blockquote><strong>Alt</strong> + BackSpace = Del</blockquote>
+	<blockquote><strong>Alt</strong> + BackSpace = Insert</blockquote>
 </ul>
 <ul>
 	<li>Additional mappings for Xperia (mini) pro:</li>
-	<blockquote><strong>Alt</strong> + S = pipe symbol
-	<br><strong>Alt</strong> + Z = backslash
-	<br><strong>SYM</strong> = opens/closes symbol input dialog</blockquote>
+	<blockquote><strong>SYM</strong> = opens/closes symbol input dialog
+	<br><strong>Alt</strong> + S = pipe symbol (|)
+	<br><strong>Alt</strong> + Z = backslash (\)
+	<br><strong>Shift</strong> + ' = tilde (~)
+	<br><strong>Shift</strong> + ? = grave accent (`)
+	<br><strong>Shift</strong> + . = caret (^)
+	<br><strong>Shift</strong> + , = greater than sign (&gt;)
+	<br><strong>Shift</strong> + @ = less than sign (&lt;)
+	<br><strong>Alt</strong> + <strong>Shift</strong> + U = opening square bracket ([)
+	<br><strong>Alt</strong> + <strong>Shift</strong> + I = closing square bracket (])
+	<br><strong>Alt</strong> + <strong>Shift</strong> + O = opening curly bracket ({)
+	<br><strong>Alt</strong> + <strong>Shift</strong> + P = closing curly bracket ({)</blockquote>
 </ul>
 
 </body>
