Document change in Function key handling.

--- a/assets/help/PhysicalKeyboard.html
+++ b/assets/help/PhysicalKeyboard.html
@@ -57,8 +57,8 @@ have to activate the appropriate option in application settings.</p>
 </ul>
 <ul>
 	<li>Function keys (F1 through F10)</li>
-	<blockquote>Hold down the shift key and press numbers 1
-	through 10 to send F1 through F10 respectively.<br><br>	
+	<blockquote>Hold down the alt key with the shift key and press numbers 1
+	through 0 to send F1 through F10 respectively.<br><br>
 	Xperia (mini) pro: pressing the <strong>Language</strong> (above right arrow) key twice
 	and a number (with <strong>Alt</strong>) maps to F1 through F10
 	</blockquote>
