Add customization for Samsung Captivate Glide (SGH-i927)

--- a/assets/help/PhysicalKeyboard.html
+++ b/assets/help/PhysicalKeyboard.html
@@ -76,6 +76,15 @@ have to activate the appropriate option in application settings.</p>
 	<blockquote><strong>Alt</strong> + BackSpace = Insert</blockquote>
 </ul>
 <ul>
+	<li>Additional mappings for Samsung Captivate Glide (SGH-i927):</li>
+	<blockquote><br><strong>Microphone key</strong> = TAB
+	<br><strong>.com</strong> = ESC
+	<br><strong>Alt</strong> + <strong>Shift</strong> + O = opening square bracket ([)
+	<br><strong>Alt</strong> + <strong>Shift</strong> + P = closing square bracket (])
+	<br><strong>Alt</strong> + <strong>Shift</strong> + A = less than sign (&lt;)
+	<br><strong>Alt</strong> + <strong>Shift</strong> + D = greater than sign (&gt;)</blockquote>
+</ul>
+<ul>
 	<li>Additional mappings for Xperia (mini) pro:</li>
 	<blockquote><strong>SYM</strong> = opens/closes symbol input dialog
 	<br><strong>Alt</strong> + S = pipe symbol (|)
