Add CTRL, Function Keys and Arrow key navigation windows. Windows are initiated with tap-and-hold on on-screen symbols.

--- a/assets/help/VirtualKeyboard.html
+++ b/assets/help/VirtualKeyboard.html
@@ -32,6 +32,19 @@ for <strong>Page Up</strong> and <strong>Page Down</strong>.</p>
 	<li><strong>Function key</strong> = <strong>CTRL + number</strong>
 	</li>
 </ul>
+<h2>On-Screen symbols</h2>
+	<p>By touching the bottom line of your screen a pop-up list of
+	on-screen symbols will appear:</p>
+<ul>
+	<li><strong>Ctrl</strong> - presses the CTRL key. Tap-and-hold
+	opens a CTRL+? letter dialog window.</li>
+	<li><strong>Esc</strong> - presses the ESC key. Tap-and-hold
+	opens the Function Keys dialog window.</li>
+	<li><strong>Sym</strong> - opens the Character Picker window.
+	Tap-and-hold opens the arrow keys navigation window.
+	<li><strong>Empty</strong> - allows to insert a single line of text.
+	<li><strong>Keyboard</strong> - shows the virtual keyboard.
+</ul>
 <h2>Examples</h2>
 <ul>
 	<li><strong>ESC</strong> = Press the trackball twice.</li>
